2005-01-27  Mikael Hallendal  <micke@imendio.com>

	* gconf/gconf-database-dbus.c: (database_filter_func),
	(database_handle_service_owner_changed):
	* gconf/gconf-dbus-utils.h:
	* gconf/gconf-dbus.c: (gconf_dbus_message_filter):
	* gconf/gconfd-dbus.c: (gconfd_dbus_init):
	* gconf/gconfd.c: (main):
	- Updated to work with D-Bus 0.23
	- Note that it still installs the service file in lib/dbus-1.0 instead 
	  of new location in share/
	- Uses ServiceOwnerChanged API now.
	* configure.in:
	- Bumped version to 2.6.4.2

2005-01-17  Mikael Hallendal  <micke@imendio.com>

	* configure.in: Bumped to 2.6.4.1
	* gconf/gconf-database-dbus.c:
	(gconf_database_dbus_notify_listeners): no reply on notify messages.

2004-08-25  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.6.4.

2004-08-25  Mark McLoughlin  <mark@skynet.ie>

	* backends/markup-tree.c: (markup_entry_get_value): don't
	abort if we find no local schema to match any locales - there
	may not be a "C" local schema at all. See bug #147522 for a
	test case from Caio Begotti <caio1982@gmail.com >

2004-08-19  J.H.M. Dassen (Ray) <jdassen@debian.org>

	Backport from HEAD:
	* doc/Makefile.am: Add FAQ and DTD to distribution.

2004-08-10  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconftool.c: (main): set the umask for
	--makefile-install-mode	so we always install the
	schemas with the correct permissions. bug #145041.

2004-07-09  Mark McLoughlin  <mark@skynet.ie>

	Patch from Kai Willadsen <kaiw@itee.uq.edu.au> in
	bug #120349.

	* doc/gconf/gconf.sgml,
	  doc/gconf/tmpl/gconf-client.sgml,
	  doc/gconf/tmpl/gconf.sgml,
	  doc/intro-article.sgml,
	  gconf/gconf-client.h,
	  gconf/gconf-listeners.h: bring the docs up to
	date with the patch that we're using GObject instead
	of GtkObject.

2004-07-07  Fernando Herrera  <fherrera@onirica.com>

	* gconf/default.path.in: Removed outdated comment.

2004-07-02  Mark McLoughlin  <mark@skynet.ie>

	Fixup some bugs with the merge files support which was