@@ -4,7 +4,7 @@ AC_INIT(gconf/gconf.h)
 
 AM_CONFIG_HEADER(config.h)
 
-AM_INIT_AUTOMAKE(GConf, 2.6.4.2)
+AM_INIT_AUTOMAKE(GConf, 2.6.4.3)
 
 AM_MAINTAINER_MODE
 
